# test-cli

./: .gitignore  Cargo.toml  config.yaml  readme.md
src/: args.rs  balances.rs  config.rs  cross_send.rs  follow_geyser.rs  main.rs  make_accounts.rs
