[package]
name = "test-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.36", features = ["derive"] }
strum = { version = "0.27.1", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.27"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.98"
serde_yaml = "0.9"
serde = { version = "1.0.219", features = ["derive"] }
anchor-lang = "0.31.0"
anchor-client = { version = "0.31.0", features = ["async"] }
hexhex = "1.1.1"
